# Dx8to12

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  buffer.cpp  buffer.h  d3d8.def  device.cpp  device.h  device_limits.h  direct3d8.cpp  direct3d8.h  dllmain.cpp  dynamic_ring_buffer.cpp  dynamic_ring_buffer.h  ff_pixel_shader.cpp  pool_heap.cpp  pool_heap.h  render_state.cpp  render_state.h  shader_parser.cpp  shader_parser.h  surface.cpp  surface.h  texture.cpp  texture.h  util.h  vertex_shader.cpp  vertex_shader.h
src/DirectX8/: SimpleMath.h  SimpleMath.inl  d3d8.h  d3d8types.h
src/shaders/: CMakeLists.txt  common.hlsl  ff_vertex_shader.hlsl  lighting.hlsl  programmable_ps.hlsl  programmable_vs.hlsl  ps_common.hlsl
src/utils/: CMakeLists.txt  asserts.cpp  asserts.h  dx_utils.cpp  dx_utils.h  murmur_hash.cpp  murmur_hash.h  range_set.h
